--- a/style.css
+++ b/style.css
@@ -1,17 +1,21 @@
 body {
   margin: 0;
+  padding: 0;
+  background: url(img/Gradient\ Background.gif) repeat center center fixed;
+  background-size: cover;
   font-family: "Montserrat", sans-serif;
-  background-color: #00000086;
 }
 
 .container {
-  background-color: #bbbbbb;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background-color: rgb(206, 206, 206);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
   margin: 0 auto;
   margin-top: 50px;
   text-align: center;
+  background: url(img/Background-Animation.gif) repeat center center fixed;
+  background-size: contain;
   max-width: 600px;
-  border-radius: 6px;
+  border-radius: 8px;
   padding: 20px;
 }
 
@@ -26,14 +30,15 @@ form input[type="text"] {
   padding: 10px;
   border: none;
   outline: none;
+  border-radius: 6px;
   font-size: 18px;
   width: 60%;
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.301);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.5);
   transition: all 0.4s ease;
 }
 
 form input[type="text"]:hover {
-  box-shadow: 0 0 20px rgba(221, 181, 0, 0.815);
+  box-shadow: 0 0 20px rgba(220, 181, 0, 0.6);
 }
 
 .ripple-button {
@@ -41,25 +46,24 @@ form input[type="text"]:hover {
   color: #fff;
   border: none;
   padding: 10px 20px;
+  margin-left: 10px;
   border-radius: 6px;
   font-size: 18px;
   cursor: pointer;
   outline: none;
-  box-shadow: 0 0 4px #999999e5;
-  transition: all 0.3s ease;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
   background-position: center;
-  transition: all 0.8s;
+  transition: all 0.5s ease-in-out;
 }
 
 .ripple-button:hover {
   background-color: #007bffe1;
-  background: #299fff radial-gradient(circle, transparent 1%, #44abff 1%)
+  background: rgba(26, 152, 255, 0.904) radial-gradient(circle, transparent 1%, #44abff 1%)
     center/15000%;
-  box-shadow: 0 0 20px rgba(221, 181, 0, 0.815);
 }
 
 .ripple-button:active {
-  background-color: #78c2ff;
+  background-color: #299fff;
   background-size: 100%;
   transition: all 0.3s ease-in-out;
 }
@@ -79,6 +83,7 @@ form input[type="text"]:hover {
 }
 
 .description {
+  text-transform: capitalize;
   font-size: 24px;
   margin-bottom: 20px;
   font-weight: 500;
@@ -93,19 +98,25 @@ form input[type="text"]:hover {
 
 .details > div {
   padding: 20px;
-  background-color: #dadadae8;
+  background-color: #ffffffe8;
   margin: 10px;
   flex: 1;
-  border-radius: 5px;
+  border-radius: 8px;
   text-align: center;
   min-height: 45px;
   font-weight: bold;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
   transition: all 0.4s ease;
+}
+
+.details > div:nth-child(3) {
+  font-size: 13.6px;
 }
 
 .details > div:hover {
   background-color: #535353;
   color: #fff;
+  cursor: none;
 }
 
 @media (max-width: 768px) {
@@ -114,7 +125,11 @@ form input[type="text"]:hover {
   }
 
   form input[type="text"] {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 70%;
+    margin-bottom: 15px;
+  }
+
+  .ripple-button {
+    margin-left: 0;
   }
 }
